spec: Apply minor fixes to the new GUI drafts

--- a/Documentation/Pflichtenheft/pflichtenheft.tex
+++ b/Documentation/Pflichtenheft/pflichtenheft.tex
@@ -1259,9 +1259,9 @@ Diese Unifikation schlägt fehl.
 Fehlgeschlagene Unifikationen enthalten im unteren Rechteck den Satz \enquote{Unifikation fehlgeschlagen:} und den Grund des Fehlschlags.
 Außerdem sind sie rot eingefärbt.
 
-\subsubsection{Unifikationsziel \texttt{=}}
+\subsubsection{Unifikationsziel \enquote{=}}
 
-Das Unifikationziel \texttt{=} wird ähnlich der Unifikation von Funktorzielen durch ein Rechteck dargestellt, das in drei weitere Rechtecke aufgeteilt wird.
+Das Unifikationziel \enquote{=} wird ähnlich der Unifikation von Funktorzielen durch ein Rechteck dargestellt, welches in drei weitere Rechtecke aufgeteilt wird.
 Das obere Rechteck enthält den Text \enquote{Unifikation}.
 Das mittlere Rechteck enthält zu unifizierenden Terme.
 Das untere Rechteck enthält bei erfolgreicher Unifikation die resultierenden Substitutionen und bei fehlgeschlagener Unifikation die Nachricht \enquote{Unifikation fehlgeschlagen:} und den Grund des Fehlschlages.
@@ -1298,7 +1298,7 @@ In diesem Fall schlägt das Ziel fehl.
 
 \subsubsection{Arithmetische Vergleiche}
 
-Das Ergebnis einen arithmetischen Vergleiches wird in einem kleinen Rechteck dargestellt.
+Das Ergebnis eines arithmetischen Vergleiches wird in einem kleinen Rechteck dargestellt.
 Ist die repräsentierte Aussage wahr, enthält das Rechteck ein Häckchen und ist grün eingefärbt.
 Ist sie nicht wahr, enthält das Rechteck ein Kreuz und ist rot eingefärbt.
 Kommt auf einer Seite des Vergleichsoperators eine unbelegte Variable vor, wird in einem rot gefärbten Rechteck die Nachricht \enquote{Unbelegte Variable:} mit dem Namen der Variable gezeigt.
@@ -1348,7 +1348,7 @@ Dies wird so dargestellt, als hätte das Ziel keine Lösungen.
 \captionof{figure}{Fehlschlagen der übergeordneten Regel}
 \end{minipage}
 
-Der Interpreter sucht nach einer neuen Unifikation für \texttt{magic\_number} und kann anschließend das Teilziel wieder besuchen.
+Der Interpreter sucht nach einer neuen Unifikation für \texttt{magic\_number} und kann anschließend das Teilziel \texttt{max} wieder besuchen.
 
 \section{Glossar}
 
